chore:增加preremder-spa-plugin预渲染router页面增强SE0,增加vue-meta-info插件只需在每个页面添加metainfo便可以增加主题信息，增强SE0

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="jeyun，一名前端工程师，这是我的个人项目，主要用于实践前端知识" />
+    <meta name="keywords" content="jeyun,邓占勇,前端,技术,WEB,blog,BLOG,前端技术,VUE博客" />
+    <meta name="anthor" content="jeyun,1958733674@qq.com" />
+    <meta name="robots" content="导航,前端,blog,个人博客,聊天室,Yong,jeyun的网站,《前端校园》,公众号,web,VUE" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
     <noscript>
